# agentpay

./: .env.example  .gitignore  AUTONOMY_MCP.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  HANDOFF_MCP1.md  LICENSE  PLAN.md  POSITIONING.md  RADAR.md  README.md  README_MCP.md  ROADMAP.md  ROADMAP_OBSERVABILITY.md  cmo-skill-update.md  demo.py  mcp_config.json  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt  setup_wallet.py  test_base_payment.py
.claude-plugin/: marketplace.json
.claude/skills/agentpay-context/: SKILL.md
.github/workflows/: test.yml
agent/: agent.py  analysis_result.json  budget_demo.py  wallet.py  week2_test.py  week2_test.py.bak
agent/hummingbot/: funding_carry_config.yml  funding_carry_strategy.py
agent/routines/: funding_carry.py  paper_trade.py  pre_trade_check.py
agentpay/: __init__.py  __init__.py.bak  _client.py  _wallet.py  budget_policy.py  client.py
agentpay/routines/: __init__.py
agents/analyst/: README.md  backtest.py  railway.toml  requirements.txt  run.py  strategy.py
cmc-skill/: README.md
cmc-skill/skills/strategy-spec/: SKILL.md
contracts/: .gitignore  DEPLOY.md  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: RadarSplit.sol
contracts/test/: RadarSplit.t.sol
db/: migrate.py
db/migrations/: flagship_runs.sql
docs/: DESIGN_NOTES.md  session-enforcement-notes.md  tier2-design.md
gateway/: _limiter.py  base.py  config.py  landing.py  main.py  mcp_server.py  radar.py  radar_settle.py  stellar.py  x402.py
gateway/routes/: agent.py  discovery.py  faucet.py  infra.py  ledger.py  plan.py  session.py  tools.py
gateway/services/: cache.py  supabase.py  tools_runtime.py  transaction_log.py
mcpb/: .gitignore  README.md  build.sh  manifest.json
npm/: README.md  README.md.bak  package-lock.json  package.json
plugins/agentpay/: .mcp.json  README.md
plugins/agentpay/.claude-plugin/: plugin.json
plugins/agentpay/skills/agentpay-route/: SKILL.md
plugins/agentpay/skills/agentpay-session/: SKILL.md
registry/: __init__.py  registry.py
tests/: conftest.py  test_agentpay_sdk.py  test_backtest.py  test_base.py  test_cache.py  test_faucet.py  test_flagship_agent.py  test_flagship_strategy.py  test_landing.py  test_ledger.py  test_plan.py  test_pre_trade_check.py  test_radar.py  test_radar_settle.py  test_refund_worker.py  test_routes_agent.py  test_routes_tools.py  test_split_retry.py  test_stellar.py  test_supabase.py  test_verified_route.py  test_x402.py
tests/fixtures/: bazaar.json  bazaar_sweep.json
tools/: agentpay_usage.py  bazaar_tx.py  check_bazaar_logs.sh  demo.py  dune_tool.py  head_to_head_demo.py  index_bazaar.py  index_bazaar_tool.py  multichain_demo.py  probe_cmc_settle.py  railway.toml  requirements.txt  set_wallet.py  strategy_spec_demo.py  sync_402index.py  verify_bazaar.sh
